--- a/gb/25/1/5/n14406468.md
+++ b/gb/25/1/5/n14406468.md
@@ -6,46 +6,52 @@
 <h6></h6>
 <hr>
 	<p>【大纪元2025年01月05日讯】（大纪元记者李熙采访报导）上海两位耄耋老人94岁的刘淑珍和97岁的潘国治，因为拆迁和冤案上访近二十年，案件仍未获得解决。2025年1月1日，两老人坐在上海市200号公园里仍在举牌维权。</p>
-<p>上海维权人士宋嘉鸿表示，“两老人维权成了大上海另一道风景线！潘国治被劳动教养28年虽已撤销，但政策落实未到位，住房未解决。刘淑珍，世博拆迁20余年，分文未补未安置，还有维稳随尾。愿两位上访老人新年愉快，身体健康！”</p>
-<h2>刘淑珍长期被维稳 世博拆迁20余年问题未解</h2>
-<p>上海世博拆迁已经过了20余年，刘淑珍当时私有财产被浦东新区政府强拆，分文未补偿、未安置，迎来的却是无止尽的维稳。据刘淑珍透露，2024年有大半年是在被维稳处境，严重影响生活行动和质量。</p>
+<p>上海维权人士宋嘉鸿表示，“两老人维权成了大上海另一道风景线！潘国治被劳动教养28年虽已撤销，但政策落实未到位，住房未解决。刘淑珍，世博拆迁二十余年，分文未补未安置，还有维稳随尾。愿两位上访老人新年愉快，身体健康！”</p>
+<h2>刘淑珍长期被维稳 世博拆迁二十余年问题未解</h2>
+<p>上海世博拆迁已经过了二十余年，刘淑珍当时私有财产被浦东新区政府强拆，分文未补偿、未安置，迎来的却是无止尽的维稳。据刘淑珍透露，2024年有大半年是在被维稳处境，严重影响生活行动和质量。</p>
 <p>由于强拆未获安置，刘淑珍只好暂住位于南码头路1698号的庆春旅馆223室。刘淑珍表示，如果她犯罪了，那就送她进看守所还管吃管住。</p>
 <p>据访民说，现在维稳保安一天工资400元，街道派出所工作人员一天700元，大半年的维稳费相当惊人，可是刘淑珍没有拿到一分钱维稳费，生活用品也没有。</p>
 <h2>潘国治被劳教28年房宅被没收</h2>
-<p>潘国治，原是浙江省玉环县前台小学教师，因解放初期受校长郑隆方安排协助地下党到邻村渔民家中“缴枪”，被关押三个月，进而失去教师职务。1951年到上海工作，1958年因“缴枪”一事再被上海警方错误劳动教养28年。1984年12月撤销其劳动教养后，仅补发了工资遣送回老家。当时，他在上海杨浦区的老房子被政府收去后一直没归回。潘国治为此一直在喊冤。</p>
-<p>10几年前，潘国治找到了在上海的女儿尤美英，父女俩开始为莫名的劳动教养上访。</p>
-<p>网名hyn的访民表示，“今年元旦新年，看到97岁潘国治和94岁刘淑珍还在举牌申诉。又看到江西2O岁的李宜雪被迫住进精神病院。又想想自己一个失地农民上访了十六年，我的心情是沉重的。”</p>
+<p>潘国治，原是浙江省玉环县前台小学教师，因中共建政初期受校长郑隆方安排协助地下党到邻村渔民家中“缴枪”，被关押三个月，进而失去教师职务。1951年到上海工作，1958年因“缴枪”一事再被上海警方错误劳动教养28年。1984年12月撤销其劳动教养后，仅补发了工资遣送回老家。当时，他在上海杨浦区的老房子被政府收去后一直没归回。潘国治为此一直在喊冤。</p>
+<p>十几年前，潘国治找到了在上海的女儿尤美英，父女俩开始为莫名的劳动教养上访。</p>
+<p>网名hyn的访民表示，“今年元旦新年，看到97岁潘国治和94岁刘淑珍还在举牌申诉。又看到江西20岁的李宜雪被迫住进精神病院。又想想自己一个失地农民上访了十六年，我的心情是沉重的。”</p>
 <p>“新年之日，说明了过去一年辛苦的上访申诉因为政府懒政而无果，艰辛的上访申诉周而复始又一年。虽然前路茫茫，夜黑难行，新的一年丢掉一切不快乐，擦干眼泪，继续追求社会的公平公正。”</p>
 <p>责任编辑：方晓</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216598.md#1" target="_blank" rel="noopener">【特稿】中共丑陋面目大起底</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/5/15/n14250677.md#1" target="_blank" rel="noopener">杜文曝官场黑幕：中共政治秩序已失控</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376275.md#1" target="_blank" rel="noopener">湖南观沙岭村民深夜游行 高喊“打倒贪官”</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/31/n14321177.md#1" target="_blank" rel="noopener">【新闻欣视角】中国经济衰败 维权事件大增</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14373999.md#1" target="_blank" rel="noopener">上海烂尾豪宅业主上街维权 遭警方暴力镇压</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/18/n14119348.md#1">大陆访民：地方党政信访局是恐怖组织</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301178.md#1">访民讶异 举报材料屡屡被转到被举报人手里</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360870.md#1">维权人士宋嘉鸿揭露上海黑监牢名录（四）</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362248.md#1">进博会临近 上海94岁残疾老访民遭严厉稳控</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/20/n11600972.md#1" target="_blank">【历史回眸】赵紫阳赞港英统治模式和蒋经国</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396714.md#1">美国女孩自曝前世死因：飞机撞击帝国大厦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398541.md#1">一个台北女生在中国鞋厂工作的回忆录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的 维吉尼亚 有圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396454.md#1">【未解之谜】无神论教授濒死带回神的启示 美国将被净化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/19/n12698527.md#1">【元曲大家】烟霞状元乔吉 散曲自成一家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399500.md#1">【未解之谜】被封400年 四川最神秘旅游禁地：迷魂凼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399669.md#1">【菁英论坛】神韵欧洲大热 展现非凡生命力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399469.md#1">【新闻看点】新病毒来了？大陆医院再人满为患</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398084.md#1">20万亿元没带动消费 中共印钞钱哪去了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399045.md#1">【中国观察】军中红二代与习的新冲突</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398551.md#1">一种副业每小时最多可赚一千美元 在家就可做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399927.md#1">赵露思瘫软坐轮椅送医 工作室回应 已住院10天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398621.md#1">徐娇餐厅劝阻路人吸烟 遭对方抢手机扔烟头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400231.md#1">“口红效应”不再 中国2024年电影票房大跌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400284.md#1">2024世界最美脸孔揭晓 韩星朴彩英首次跻身前十</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398472.md#1">《魔戒：洛汗人之战》影评：国难当头公主挑起大梁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400671.md#1">惊人研究：单一茶包可释放数亿颗塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14397193.md#1">落枕怎么办？5个运动练习改善颈胸椎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392749.md#1">你的大脑天生就喜欢诚实：说谎会使人得病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399098.md#1">花10分钟做这件事 你的玫瑰在冬天会更坚强</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391656.md#1">化解亲子冲突不用委屈自己！这样沟通最有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/5/n14406468.htm">上海两名九旬老人新年在公园举牌维权</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406468.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
