--- a/gb/24/12/31/n14403015.md
+++ b/gb/24/12/31/n14403015.md
@@ -7,14 +7,14 @@
 </h6>
 <hr>
 	<p>【大纪元2025年01月01日讯】2024年，中共当局已债台高筑，国债、地方债、企业债、非金融企业债、金融系统债，债债高企。</p>
-<p>2024年10月18-20日，北京金融街论坛召开。中央财金大学副校长李建军在会上作报告说：</p>
-<p>中国的债务规模有多大？截止2024年6月30日，地方政府债务余额，合法的部分42.23万亿元（人民币，下同），城投债隐性债57.16万亿元，加起来是百万亿元的规模，99.39万亿元。地方负债率，如果加上中央国债30万亿元，相较2023年的GDP总量126万亿元，超过了100%，远高于国际警戒线60%。</p>
-<p>据财政部的数据，2024年1-7月，31个省级行政区中，除上海盈余703亿元外，其他省份均入不敷出。其中，财政收支缺口超过1000亿元的省份有23个；缺口超过2000亿元的省份多达15个，财政缺口3000亿以上的也有4个，四川更是以4130亿元赤字位居首位。</p>
+<p>2024年10月18—20日，北京金融街论坛召开。中央财金大学副校长李建军在会上作报告说：</p>
+<p>中国的债务规模有多大？截至2024年6月30日，地方政府债务余额，合法的部分42.23万亿元（人民币，下同），城投债隐性债57.16万亿元，加起来是百万亿元的规模，99.39万亿元。地方负债率，如果加上中央国债30万亿元，相较2023年的GDP总量126万亿元，超过了100%，远高于国际警戒线60%。</p>
+<p>据财政部的数据，2024年1—7月，31个省级行政区中，除上海盈余703亿元外，其它省份均入不敷出。其中，财政收支缺口超过1,000亿元的省份有23个；缺口超过2,000亿元的省份多达15个，财政缺口3,000亿以上的也有4个，四川更是以4,130亿元赤字位居首位。</p>
 <p>如果把中国比喻为中共营运的一家公司的话，这个公司已濒临破产，到处都在喊缺钱。</p>
 <p>怎么办？中共也没有什么新招，还是历史上“打土豪、分田地”的老办法，只不过换了一些新说法，主要招数有六：</p>
 <h2><strong>第一，补30年前的税</strong></h2>
-<p>据中国大陆媒体报道，湖北枝江酒业股份有限公司，被倒查30年，要求补交税款8500余万元；广东佛山一家已倒闭多年的新世界酒店被倒查25年，要求补交税款、滞纳金93万元；惠州泰基集团被倒查20年，要求补税5304万余元；青海藏格矿业被倒查20年，要求补交税款、带纳金1.88亿元；湖南岳阳某知名开发商被倒查20年，要求补税罚款9亿多元。</p>
-<p>在各地陆续出现补交几十年前税的同时，据《南方都市报》6月报道，全国已有至少20个省份建立“警税合成作战中心”，包括山西、广东、新疆等地。该中心大多设在公安局，少数设在税务局。</p>
+<p>据中国大陆媒体报导，湖北枝江酒业股份有限公司，被倒查30年，要求补交税款8,500余万元；广东佛山一家已倒闭多年的新世界酒店被倒查25年，要求补交税款、滞纳金93万元；惠州泰基集团被倒查20年，要求补税5,304万余元；青海藏格矿业被倒查20年，要求补交税款、带纳金1.88亿元；湖南岳阳某知名开发商被倒查20年，要求补税罚款9亿多元。</p>
+<p>在各地陆续出现补交几十年前税的同时，据《南方都市报》6月报导，全国已有至少20个省份建立“警税合成作战中心”，包括山西、广东、新疆等地。该中心大多设在公安局，少数设在税务局。</p>
 <p>在政府序列中，警、税是不同的部门，工作对象、职责、权限都不一样。警、税如何“合成”？法律强制与经济手段“合成”？对谁“作战”？对纳税人，还是对犯罪分子？怎么“作战”？搞运动，还是搞刑讯逼供？</p>
 <p>中共习惯于用“枪杆子”（军队）、“刀把子”（专政机器）对中国民众实施高压。所谓“警税合成作战中心”，就是中共把“刀把子”也当成了对付纳税人的工具，想什么时候查你，就什么时候查你，让你缴税你就得缴，你不缴就强制你缴，不服不行。</p>
 <h2><strong>第二，发50年后还的债</strong></h2>
@@ -30,13 +30,13 @@
 <h2><strong>第四，</strong><strong>刮</strong><strong>贪官身上的油水</strong></h2>
 <p>2024年，中共反腐败力度空前加大。除了打击政治上的异己之外，可能还有一个目的，就是从贪官身上刮油水。</p>
 <p>2024年，中共反腐打虎破了两项历史纪录：一是查办的副省部级以上高官，及其他中管干部达到58人；二是审判的亿元贪官达37人。</p>
-<p>前十大亿元贪官分别是：（1）原内蒙古呼和浩特经济技术开发区党工委书记李建平，涉贪金额超过30亿元人民币；（2）原中国华融国际控股公司总经理白天辉，受贿11.08亿元；（3）原广东华兴银行党委书记张长弓受贿、挪用公款近10亿元；（4）原国家烟草专卖局副局长何泽华，受贿9.43亿元；（5）原贵州省委书记孙志刚，受贿8.13亿元；（6）原贵州省政法委副书记刘文新，受贿6.09亿元；（7）原辽宁省副省长、公安厅长王大伟，受贿5.55亿元；（8）原山东省青岛市政协主席汲斌昌，受贿5.26亿元。（9）原招商银行行长田惠宇，受贿2.1亿元；利用未公开信息交易，非法获利2.9亿余元；内幕交易、泄露内幕信息，非法获利807万余元；（10）原贵州省政协副主席李再勇，受贿4.32亿。</p>
+<p>前十大亿元贪官分别是：（1）原内蒙古呼和浩特经济技术开发区党工委书记李建平，涉贪金额超过30亿元；（2）原中国华融国际控股公司总经理白天辉，受贿11.08亿元；（3）原广东华兴银行党委书记张长弓受贿、挪用公款近10亿元；（4）原国家烟草专卖局副局长何泽华，受贿9.43亿元；（5）原贵州省委书记孙志刚，受贿8.13亿元；（6）原贵州省政法委副书记刘文新，受贿6.09亿元；（7）原辽宁省副省长、公安厅长王大伟，受贿5.55亿元；（8）原山东省青岛市政协主席汲斌昌，受贿5.26亿元。（9）原招商银行行长田惠宇，受贿2.1亿元；利用未公开信息交易，非法获利2.9亿余元；内幕交易、泄露内幕信息，非法获利807万余元；（10）原贵州省政协副主席李再勇，受贿4.32亿元。</p>
 <p>仅以上十个亿元贪官，共计涉案95亿元。这是法院认定的涉案金额，未计入其中的钱可能更多。</p>
 <h2><strong>第五，“远洋捕捞”抢民企的财</strong></h2>
 <p>所谓“远洋捕捞”，是指中共的一些执法机关，在利益驱使下，跨省、跨区域抓捕、查封、冻结、甚至划转外地民营企业财产和个人财产。</p>
-<p>据英国《金融时报》12月28日报道，2024年，已有80多家在上海和深圳证券交易所上市的企业高管被各地警方拘捕。</p>
+<p>据英国《金融时报》12月28日报导，2024年，已有80多家在上海和深圳证券交易所上市的企业高管被各地警方拘捕。</p>
 <p>2024年10月以来，广东省省情调查研究中心撰写的一篇《广东省情内参》在公众间流传。该内参讲，近年来，广州、深圳、东莞等珠三角地市已成为异地执法的高发地。以广州市为例，自2023年以来，有朴朴、壹健康、九浚等近万家企业遭遇异地执法，这些企业绝大部分是民营企业。</p>
-<p>2023年11月8日，内蒙古呼伦贝尔市新巴尔虎左旗公安局的警察，跑到北京，以涉嫌“开设以赌场罪”的名义，将优友互动（北京）科技公司总经理邢燕军及其员工共14人一起抓到内蒙古关押，并将该公司的账户冻结。</p>
+<p>2023年11月8日，内蒙古呼伦贝尔市新巴尔虎左旗公安局的警察，跑到北京，以涉嫌“开设赌场罪”的名义，将优友互动（北京）科技公司总经理邢燕军及其员工共14人一起抓到内蒙古关押，并将该公司的账户冻结。</p>
 <p>邢燕军的合伙人和家人认为，涉案游戏产品的娱乐模式不存在法律规定的开设赌场行为。</p>
 <p>2023年12月，当地检察院以“证据不足”作出不批捕决定。但是，当地公安局仍坚持对邢燕军采取指定居所监视居住，继续羁押。</p>
 <p>2024年4月3日，邢燕军在“指定居住”房间内非正常死亡。2024年12月，案件被公安机关撤销，理由是“没有犯罪事实”。</p>
@@ -44,7 +44,7 @@
 <p>“远洋捕捞”是一个拐弯抹角的说法，说白了，就是某些执法机关对民营企业和个体工商户的跨境“抢劫”。</p>
 <h2><strong>第六，外汇的“投资损失”和“误差与遗漏”</strong></h2>
 <p>据时政评论员赵亮的《再谈外汇——不变的中国储备》一文讲，中国人民勤劳智慧，省吃俭用，年年创汇几千亿美元。但是，中国的外汇储备资产，却始终维持在3万亿美元左右。</p>
-<p>文章对2016-2023年中国国际收支状况进行考察后得出结论：这8年中，中国几千亿美元的贸易顺差，平均每年有1700亿美元被中共“投资损失”掉了，平均每年有1600亿美元被中共“误差与遗漏”掉了。最终，每年还需要提取数十亿美元的国家储备资产才能达到收支平衡。</p>
+<p>文章对2016—2023年中国国际收支状况进行考察后得出结论：这8年中，中国几千亿美元的贸易顺差，平均每年有1,700亿美元被中共“投资损失”掉了，平均每年有1,600亿美元被中共“误差与遗漏”掉了。最终，每年还需要提取数十亿美元的国家储备资产才能达到收支平衡。</p>
 <p>文章说，根据最新的数据，2024年的货物贸易可能接近1万亿美元。可以预期的是，除去进口服务外，剩下的，估计又要全部被“投资损失”或“误差与遗漏”了。</p>
 <p>这个“投资损失”和“误差与遗漏”，对普通中国老百姓来说，根本看不明白。但是，万变不离其宗，那就是对中国民众创造的天量财富的“明抢”与“暗抢”。</p>
 <h2><strong>结语</strong></h2>
@@ -54,36 +54,40 @@
 <p>中共每天、每月、每年，都要投入大量资金迫害好人，中共的财政可能好吗？绝对不可能。只能陷入缺钱-抢钱-再缺钱-再抢钱的恶性循环中。</p>
 <p>中共债台高筑，抢钱不止，离中共垮台也就不远了。</p>
 <p>大纪元首发</p>
-<p>责任编辑：高义</p>
-	
+<p>责任编辑：高义#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389954.md#1">王友群：陈一新正在走周永康等的绝路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397286.md#1">王友群：2024年中共的“八怕”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397961.md#1">王友群：2024年中共的六大败象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401967.md#1">王友群：2024中共腐败两大指标破历史纪录</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10101129.md#1" target="_blank">林辉：沈阳雪堆中千余苏军尸体背后的暴行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md#1" target="_blank">组图：法轮功在海峡两岸的强烈对比</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398541.md#1">一个台北女生在中国鞋厂工作的回忆录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的 维吉尼亚 有圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399500.md#1">【未解之谜】被封400年 四川最神秘旅游禁地：迷魂凼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761555.md#1">宗泽“宗爷爷”：大宋的铁血老将</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/19/n12698527.md#1">【元曲大家】烟霞状元乔吉 散曲自成一家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397456.md#1">【直播】新唐人“2025跨年缤纷夜”特别节目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14402015.md#1">【军事情报局】中共六代机歼轰36？美国早知情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402148.md#1">【时事金扫描】同日三大客机空难 韩国空难解密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396735.md#1">当前Costco最热卖的8种商品 含美味虾饺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388412.md#1">2024最热销六款日本车 CR-V和RAV4均上榜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400931.md#1">韩国空难179死 黑匣子找到 全国哀悼7天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400231.md#1">“口红效应”不再 中国2024年电影票房大跌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400284.md#1">2024世界最美脸孔揭晓 韩星朴彩英首次跻身前十</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14402017.md#1">赵露思病倒风波延烧 剧组“阴阳剧本”透隐情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401984.md#1">基努·李维家中曾遭窃 一年后在智利寻回名表</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402373.md#1">MAMAMOO辉人台中跨年 彩排后向粉丝诉感谢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400671.md#1">惊人研究：单一茶包可释放数亿颗塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400184.md#1">厨房必备珍宝“食盐”妙用多 别再花冤枉钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14397981.md#1">喝对咖啡护肝 过量失智 加它稳定血压血糖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401399.md#1">为什么洋芋片的包装中有那么多气体？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400372.md#1">空气炸锅煮喷香米饭 善用三技巧省心省力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/31/n14403015.htm">王友群：2024年中共六个“抢钱”模式</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/31/n14403015.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
